# birthbot

./: .gitignore  Cargo.toml  LICENSE  README.md  UPDATES.md  rustfmt.toml
init/: create-announcements.sql  create-birthdays.sql
src/: announce.rs  background.rs  birthday.rs  bot_data.rs  commands.rs  config.rs  error.rs  lib.rs  main.rs  model.rs  prelude.rs  state.rs  tasks.rs
src/background/: birthdays.rs  changelog.rs
src/commands/: birthday.rs  mod.rs
src/commands/birthday/: announce.rs  channel.rs  check.rs  get.rs  help.rs  list.rs  mod.rs  next.rs  set.rs  unannounce.rs  unset.rs
src/commands/birthday/channel/: get.rs  set.rs  unset.rs
src/errors/: bot.rs  bot_error.rs  mod.rs
src/macros/: mod.rs
src/model/: birthday.rs  guild.rs  guild_data.rs  member.rs  member_data.rs
src/prelude/: util.rs
src/tasks/: announce_birthdays.rs  announce_updates.rs
