[package]
name = "birthbot"
description = "An open-source and ad-free Discord bot for keeping track of birthdays."
version = "0.3.1"
edition = "2021"
authors = ["Indraneel Mahendrakumar"]
repository = "https://github.com/Carnagion/birthbot"
documentation = "https://docs.rs/birthbot"
readme = "README.md"
license = "MIT"

[dependencies]
anyhow = "1.0.71"
chrono = { version = "0.4.26", features = ["serde"] }
log = "0.4.17"
mongodm = "0.9.1"
poise = "0.5.5"
serde = { version = "1.0.163", features = ["derive"] }
simplelog = "0.12.1"
snafu = "0.7.4"
tokio = "1.28.1"
toml = "0.7.6"
version = "3.0.0"
