[package]
authors = ["Indraneel Mahendrakumar"]
description = "An open-source and ad-free Discord bot for keeping track of birthdays."
documentation = "https://docs.rs/birthbot"
edition = "2021"
license = "MIT"
name = "birthbot"
readme = "README.md"
repository = "https://github.com/Carnagion/birthbot"
version = "0.3.2"

[dependencies]
anyhow = "1.0.71"
chrono = {version = "0.4.26", features = ["serde"]}
log = "0.4.17"
mongodm = "0.9.1"
poise = "0.5.5"
serde = {version = "1.0.163", features = ["derive"]}
simplelog = "0.12.1"
snafu = "0.7.4"
tokio = "1.28.1"
toml = "0.7.6"
version = "3.0.0"
