[package]
name = "birthbot"
version = "0.3.2"
edition = "2021"
authors = ["Indraneel Mahendrakumar"]
description = "An open-source and ad-free Discord bot for keeping track of birthdays."
readme = "README.md"
repository = "https://github.com/Carnagion/birthbot"
documentation = "https://docs.rs/birthbot"
license = "MIT"

[dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }
# NOTE: I prefer `jiff` but both `chrono` and `time` are already in our 250+ crate dependency tree thanks to `serenity` >:(
chrono = { version = "0.4.40", default-features = false, features = ["clock", "std"] }
figment = { version = "0.10.19", features = ["toml", "env"] }
poise = "0.6.1"
rusqlite = { version = "0.34.0", features = ["bundled", "chrono", "functions"] }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["rt-multi-thread"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.19"
